@@ -2,7 +2,7 @@
  *	gamewin.h - X-windows Ultima7 map browser.
  *
  *  Copyright (C) 1998-1999  Jeffrey S. Freedman
- *  Copyright (C) 2000-2001  The Exult Team
+ *  Copyright (C) 2000-2010  The Exult Team
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -328,6 +328,7 @@ public:
 	void theft();			// Handle thievery.
 	void call_guards(Actor *witness = 0);
 	void attack_avatar(int num_guards = 0);
+	bool is_hostile_nearby(); // detects if hostiles are nearby for movement speed
 	/*
 	 *	Rendering:
 	 */
